# derive-codegen

./: Cargo.toml  Code.ts  Input.ts  README.md  generate-typescript.ts  match.ts  test-bytes-from-spans.ts  test.ts  types.ts
code/: Cargo.toml
code/src/: lib.rs  types.rs  utils.rs
deno-lib/: Code.ts  gen.ts  mod.ts
deno-lib/generators/: typescript-minimal.ts  typescript.ts
deno-lib/generators/wip/: typescript-extendable.ts
derive/: Cargo.toml
derive-codegen/: Cargo.toml
derive-codegen/src/: generate.rs  lib.rs  test.rs
derive/src/: attr.rs  cod.rs  lib.rs  parse.rs
examples/: Cargo.toml
examples/src/: lib.rs
golang-generator/: Code.ts  generate-go.ts  types.gen.ts
golang-generator/codegen-types/: go.mod
golang-generator/codegen-types/simple/: simple.go  simple_test.go
golang-generator/codegen-types/simple/wip/: SimpleEnum_gen.go  SimpleStruct_gen.go
golang-generator/example-gen/simple/: simple.go
golang-generator/example-gen/simple/wip/: SimpleEnum_gen.go  SimpleStruct_gen.go  SimpleTupleStruct_gen.go
src/: generate-typescript-types-with-deno.rs  generate.rs  lib.rs  print-internal-types.rs  test.rs
src/snapshots/: i_herenow_serde_generate__test__generate.snap.new  serde_as_schema__test__generate.snap.new  serde_as_schema__test__test_sers__[20,400].snap.new  serde_as_schema__test__test_sers__tuple_partially_named.snap.new
src/test/: random_serde.rs
types/: Cargo.toml
types/src/: complete.rs  lib.rs
typescript-generator/: Code.ts  generate-typescript.ts
typescript-generator/codegen-types/: types.ts
xtask/: Cargo.toml
xtask/src/: codegen_design.rs  generate_golang_types_example.rs  generate_typescript_types.rs  main.rs  print_internal_types.rs
