[workspace]
members = ["./derive", "./code", "./types", "./examples"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Cole Lawrence <cole@colelawrence.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/colelawrence/derive-codegen"
documentation = "https://docs.rs/derive-codegen/"

[workspace.dependencies]
derive-codegen = { path = "." }
i-codegen-code = { path = "./code" }
i-codegen-derive = { path = "./derive" }
i-codegen-types = { path = "./types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package]
name = "derive-codegen"
description = "Highly-configurable code generation tooling based on Rust types."
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["serde", "build", "codegen", "macro", "schema"]
categories = ["development-tools::build-utils"]
exclude = ["/.github/**"]

[features]
generate = []
generate-internal = ["generate"]
default = ["generate"]

[[bin]]
name = "print-internal-types"
path = "src/print-internal-types.rs"
features = ["generate-internal"]

[[bin]]
name = "generate-typescript-types-with-deno"
path = "src/generate-typescript-types-with-deno.rs"
features = ["generate-internal"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
i-codegen-derive.workspace = true
i-codegen-code.workspace = true
i-codegen-types.workspace = true
rayon = "1.7.0"

[dev-dependencies]
insta = "1.30.0"
