[workspace]
members = ["./derive", "./derive-codegen", "./code", "./xtask"]

[workspace.package]
edition = "2021"
authors = ["Cole Lawrence <cole@colelawrence.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/colelawrence/derive-codegen"
documentation = "https://docs.rs/derive-codegen/"

[workspace.dependencies]
derive-codegen = { path = "./derive-codegen", version = "0.0.3" }
i-codegen-code = { path = "./code", version = "0.0.2" }
i-codegen-derive = { path = "./derive", version = "0.0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
