[package]
name = "i-herenow-serde-generate-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i-herenow-serde-generate-types = { version = "0.1.0", path = "../types" }
linkme = "0.3.10"
serde = "1.0.164"
serde-reflection = "0.3.6"
serde_json = "1.0.99"
