[package]
name = "i-codegen-code"
description = "Common tools supporting the `derive-codegen` crate."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
i-codegen-types.workspace = true
linkme.workspace = true
serde-reflection = "0.3.6"
