[package]
name = "i-herenow-serde-generate-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
i-herenow-serde-generate-types = { version = "0.1.0", path = "../types" }
i-herenow-serde-generate-code = { version = "0.1.0", path = "../code" }
linkme = "0.3.10"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0.2"
serde = "1.0.164"
serde_derive_internals = "0.28.0"
syn = { version = "2.0", features = ["extra-traits"] }
serde_json = "1.0.99"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies.syn]
