[package]
name = "i-codegen-derive"
description = "Proc-macro supporting the `derive-codegen` crate."
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
proc-macro = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
i-codegen-types.workspace = true
i-codegen-code.workspace = true
serde_derive_internals = "0.28.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0.2"
syn = { version = "2.0", features = ["extra-traits"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
